# stencil

./: .gitignore  .python-version  CONTRIBUTING.md  Makefile  README.md  format.md  goal.md  index.html  parser.py  poster_content.md  pyproject.toml  pyrightconfig.json  requirements.txt  sten.yaml  stencil.yaml  tasks.md  temp_react_backend.py  ui.html
my_flutter_app/: package-lock.json
my_flutter_app/lib/: main.dart
my_react_app/: package-lock.json  package.json
my_react_app/src/: App.tsx  index.css
my_react_app/src/components/: Input.tsx  Separator.tsx  Title.tsx
output/flutter_app/lib/: main.dart
output/html/: style.css
output/react/src/: App.tsx
output/react/src/components/: Button.tsx  Textbox.tsx
stencil/: cli.py  engine.py  flutter_backend.py  html_backend.py  imgui_backend.py  main.py  react_backend.py  tkinter_backend.py
stencil/abstract_classes/: Button.py  Component.py  Input.py  Text.py  Title.py
stencil/backends/curses/: Button.j2  Input.j2  Separator.j2  Text.j2  Title.j2  _layout.j2  backend.yaml
stencil/backends/html/: Button.j2  Input.j2  Text.j2  Title.j2  _layout.j2  backend.yaml
stencil/backends/imgui/: Button.j2  Input.j2  Separator.j2  Text.j2  Title.j2  _layout.j2  backend.yaml
stencil/test/: buttext.qml
