[project]
name = "stencil-ui"
version = "2.0.0"

description = "CLI tool to generate UI code for HTML, ImGui, or Curses from a simple config file"
readme = "README.md"
authors = [{name="Krishanth K"}]
license = {file="LICENSE"}
requires-python = ">=3.10"

dependencies = [
    "PyYAML>=6.0.3",
    "watchdog>=3.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
imgui = [
    "glfw",
    "PyOpenGL",
    "imgui[glfw]"
]

[project.scripts]
stencil = "stencil.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stencil*"]
